fix overflow-y scrolling

--- a/neoplurkcss3.css
+++ b/neoplurkcss3.css
@@ -11,7 +11,6 @@
 
 body {
 	overflow-x: hidden;
-	overflow-y: hidden;
 	width: 100%;
 	height: 99%;
 	min-width: 650px; 
